# tsu_rust

./: .gitignore  Cargo.md  Cargo.toml  README.md  readme.md
backup/lgr_bootcamp/2_intermediate/4_advanced_error_handling/c6_thiserror_anyhow/: Cargo.toml
base/base_exploratory/: Cargo.toml  readme.md
base/base_exploratory/src/tsu/config/: mod.rs
bootcamp/1_beginner/5_larger_projects/c1_cargo_features/draw/: Cargo.toml
bootcamp/1_beginner/5_larger_projects/c1_cargo_features/draw_consumer/: Cargo.toml
bootcamp/bootcamp_lgr/: Cargo.toml  readme.md
bootcamp/bootcamp_lgr/src/: base.rs  lib.rs  main.rs
bootcamp/bootcamp_lgr/src/m01/: mod.rs
bootcamp/bootcamp_lgr/src/m01/c01/: mod.rs  u01_setup.rs  u02_hello_world.rs  u03_variables.rs  u04_data_types.rs  u05_constants_statics.rs  u06_functions.rs  u07_control_flow.rs  u08_comments.rs
bootcamp/bootcamp_lgr/src/m01/c02/: mod.rs  u01_memory_regions.rs  u01_rust_based_cs.rs  u02_ownership_part1.rs  u03_ownership_part2.rs  u04_borrowing.rs  u05_slices.rs  u06_strings.rs
bootcamp/bootcamp_lgr/src/m01/c03/: mod.rs  u01_structs.rs  u02_implementation_blocks.rs  u03_tuple_structs.rs  u04_enums.rs  u05_matching.rs  u06_option.rs  u07_result.rs  u08_vectors.rs
bootcamp/bootcamp_lgr/src/m01/c04/: mod.rs  u01_project_structure.rs  u02_modules_part1.rs  u03_modules_part2.rs  u03_publishing_packages.rs  u04_external_dependencies.rs  u05_publishing_packages.rs
bootcamp/bootcamp_lgr/src/m01/c05/: mod.rs  u01_cargo_features.rs  u02_cargo_workspaces.rs
bootcamp/bootcamp_lgr/src/m01/c06/: mod.rs  u01_unit_tests.rs  u02_documentation.rs  u02_integration_tests.rs  u03_documentation.rs  u04_benchmark_tests.rs
bootcamp/bootcamp_lgr/src/m02/: mod.rs
bootcamp/bootcamp_lgr/src/m02/c01/: mod.rs  u01_generics.rs  u02_traits.rs  u03_trait_bounds.rs  u04_super_traits.rs  u05_trait_objects.rs  u06_deriving_traits.rs  u07_orphan_rule.rs
bootcamp/bootcamp_lgr/src/m02/c02/: mod.rs  u01_concrete_lifetimes.rs  u02_generic_lifetimes.rs  u03_lifetime_elision.rs  u04_box_smart_pointer.rs  u05_rc_smart_pointer.rs  u06_refcell_smart_pointer.rs  u07_deref_coercion.rs
bootcamp/bootcamp_lgr/src/m02/c03/: mod.rs  u01_unrecoverable_errors.rs  u02_recoverable_errors.rs  u03_propagating_errors.rs  u04_result_option.rs  u05_error_types.rs
bootcamp/bootcamp_lgr/src/m02/c04/: mod.rs  u01_error_handling.rs  u02_basic_error_handling.rs  u03_custom_errors1.rs  u04_custom_errors2.rs  u05_custom_errors3.rs  u06_thiserror_anyhow.rs  u07_error_stack.rs
bootcamp/bootcamp_lgr/src/m02/c05/: mod.rs  u01_closures_part1.rs  u02_closures_part2.rs  u03_function_pointers.rs  u04_iterator_part1.rs  u05_iterator_part2.rs  u06_iterating_collections.rs  u07_combinators.rs
bootcamp/bootcamp_lgr/src/m02/c06/: mod.rs  u01_jira_clone.rs
bootcamp/bootcamp_lgr/src/m03/: mod.rs
bootcamp/bootcamp_lgr/src/m03/c01/: mod.rs  u01_concurrency.rs  u02_threads.rs  u03_values_to_threads.rs  u04_messages_to_threads.rs  u05_state_to_threads_part1.rs  u06_state_to_threads_part2.rs  u07_send_sync.rs  u08_async_await.rs  u09_tokio_tasks.rs  u10_cpu_intensive.rs  u11_streams.rs
bootcamp/bootcamp_lgr/src/m03/c02/: mod.rs  u01_macros.rs  u02_declarative_macros_part1.rs  u03_declarative_macros_part2.rs  u04_procedural_macros.rs  u05_macros_function.rs  u06_macros_custom.rs  u07_macros_attribute_part1.rs  u08_macros_attribute_part2.rs
bootcamp/bootcamp_lgr/src/m04/: mod.rs
bootcamp/p05_features_lib/: Cargo.toml
bootcamp/the_bootcamp/: Cargo.toml  readme.md
bootcamp/the_bootcamp/src/: main.rs
bootcamp/the_bootcamp/src/m01/: mod.rs
bootcamp/the_bootcamp/src/m02/: mod.rs
current/p09_benchmark/: Cargo.toml
current/p09_benchmark/benches/: sorting_benchmark.rs
projects/askama_todos/: .env  Cargo.toml  readme.md  rustfmt.toml
projects/askama_todos/src/: init.rs  main.rs  routes.rs
projects/askama_todos/src/data/: errors.rs  user.rs
projects/askama_todos/src/handlers/: auth.rs  mod.rs  public.rs  todos.rs
projects/askama_todos/src/models/: templates.rs  user_form_model.rs
projects/askama_todos/templates/: index.html
projects/askama_todos/templates/pages/: home.html  log-in.html  server-error.html  sign-up.html
projects/askama_todos/templates/partials/: navigation.html
projects/axum_crud/: Cargo.toml  readme.md
projects/axum_crud/src/: db.rs  main.rs  rest.rs
the_book/the_book/: Cargo.toml  readme.md
the_book/the_book/src/: base.rs  lib.rs  main.rs
the_book/the_book/src/c01/: mod.rs  u01_installation.rs  u02_hello_world.rs  u03_hello_cargo.rs  u04_hello_test.rs
the_book/the_book/src/c02/: u01_guessing_game.rs
the_book/the_book/src/c03/: mod.rs  u01_variables_mutability.rs  u02_types.rs  u03_functions.rs  u05_control_flow.rs
the_book/the_book/src/c04/: u01_ownership.rs  u02_references.rs  u03_slices.rs
the_book/the_book/src/c05/: mod.rs  u01_structs.rs  u02_example.rs  u03_method_syntax.rs
the_book/the_book/src/c06/: mod.rs  u01_enums.rs  u02_match.rs
the_book/the_book/src/c07/: mod.rs  u01_packages.rs  u02_modules.rs  u03_paths.rs  u04_use.rs
the_book/the_book/src/c08/: u01_vectors.rs  u02_strings.rs  u03_hash_maps.rs
the_book/the_book/src/c09/: c01_unrecoverable_errors.rs  c02_recoverable_errors.rs  mod.rs
the_book/the_book/src/c10/: u01_generics.rs  u02_traits.rs  u03_lifetimes.rs
the_book/the_book/src/c11/: u01_tests.rs  u02_test_control.rs  u03_test_organization.rs
the_book/the_book/src/c12/: u01_minigrep.rs
the_book/the_book/src/c13/: u01_closures.rs  u02_iterators.rs
the_book/the_book/src/c14/: u01_profiles.rs  u02_crates_io.rs  u03_workspaces.rs
the_book/the_book/src/c15/: mod.rs  u01_box_smart_pointer.rs  u02_smart_pointers_references.rs  u04_rc_smart_pointer.rs  u05_refcell_smart_pointer.rs  u06_reference_cycles.rs
the_book/the_book/src/c16/: mod.rs
the_book/the_book/tests/: integration_test.rs
v2/bootcamp/: Cargo.toml  readme.md  rustfmt.toml
v2/bootcamp/m1_c4_u1_project_structure/base_package/: Cargo.toml
v2/bootcamp/src/: base.rs  main.rs
v2/bootcamp/src/m01/: mod.rs
v2/bootcamp/src/m1_beginner/: mod.rs
(+781 files in other folders)
