[package]
name = "base_exploratory"
version = "0.1.0"
edition = "2021"

[dependencies]
# pod: Config
# Loading configuration files
config = { version = "0.15.14" }

# pod: Serde
# Serializing and Deserializing
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143" }
serde-xml-rs = { version = "0.6.0"}