[package]
name = "bootcamp_lgr"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = { version = "0.11.8"}
log = { version = "0.4.28" }
rand = { version = "0.9.2" }
serde = { version = "1.0.228", features = ["derive"]}
serde_json = { version = "1.0.145" }
unicode-segmentation = { version = "1.9.0"}
