[package]
name = "the_bootcamp"
version = "0.1.0"
edition = "2021"
# pod: fields for publishing into crates.io
description = "tsu"
license = "MIT"

[dependencies]

# pod: error logging
# - log: lightweight facade 
# - env_logger: implementation that uses env-vars to set log levels
log = { version = "0.4.28" }
env_logger = { version = "0.11.8"}

rand = { version = "0.9.2" }

# pod: serialize & deserialize
serde = { version = "1.0.228", features = ["derive"]}
serde_json = { version = "1.0.145" }

# pod: Graphemes
unicode-segmentation = { version = "1.9.0"}

uuid = { version = "1.18.1", features = ["v4"] }