[package]
name = "askama_todos"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
askama = { version = "0.12.1" }
axum = { version = "0.7.5", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Config
config = { version = "0.15.9" }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
validator = { version = "0.18.1", features = ["derive"] }

# Env Vars
dotenvy = "0.15.7"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }

# Validations
regex = "1.10.6"