[package]
name = "base_app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
dotenv = "0.15.0"
once_cell = "1.18.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.32.1", features = ["full"] }

[dev-dependencies]
axum-test-helper = "0.3.0"