[package]
name = "bootcamp"
version = "0.1.0"
edition = "2021"
description = "tsu"

[dependencies]
rand = "0.9.2"

# pod: serialize & deserialize
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0" }

# pod: Graphemes
unicode-segmentation = { version = "1.9.0"}

uuid = { version = "1.18.1", features = ["v4"] }